--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "fcc-learn-npm-package-json",
+		"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -10,5 +10,7 @@
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git"
-	}
+	},
+	"author": "Jane Doe"
+
 }
